<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="todo">TODO</string>
    <string name="title_text">Playlist maker</string>
    <string name="search_btn_text">Поиск</string>
    <string name="media_btn_text">Медиатека</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_dark_theme">Темная тема</string>
    <string name="sharing_settings_text">Поделиться приложением</string>
    <string name="help_settings_text">Написать в поддержку</string>
    <string name="agreement_settings_text">Пользовательское соглашение</string>
    <string name="sharingMessage">https://vivt.ru</string>
    <string name="agreementUrl">https://vivt.ru</string>
    <string name="sendHelpMail">zvonkovich2001@gmail.com</string>
    <string name="sendHelpThemeMessage">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="sendHelpMessage">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="search_textView">Поиск</string>
    <string name="Woodkid">Woodkid</string>
    <string name="_4_04">4:04</string>
    <string name="album_track">Arcane: Season 2</string>
    <string name="album_year">2024</string>
    <string name="Indie_rock">Indie rock</string>
    <string name="placeholderNothing_text">Ничего не нашлось</string>
    <string name="placeholderErrorNetwork_text">Проблемы со связью</string>
    <string name="placeholderErrorNetwork_text2">Загрузка не удалась. Проверьте</string>
    <string name="placeholderErrorNetwork_text3">подключение к интернету</string>
    <string name="button_placeholderErrorNetwork">Обновить</string>
    <string name="titleText_historySearch">Вы искали</string>
    <string name="ButtonClearHistory_text">Очистить историю</string>
    <string name="Duration">Длительность</string>
    <string name="Album">Альбом</string>
    <string name="Year">Год</string>
    <string name="Genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="defaultDuration">00:00</string>
    <string name="adress">"zvonkovich2001@gmail.com"</string>
    <string name="not_internet">"Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету"</string>
    <string name="nothing_not_found">Ничего не нашлось</string>
</resources>